--- a/AppControl/app/src/main/AndroidManifest.xml
+++ b/AppControl/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +22,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".UsuariosActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".UsuarioForm"
+            android:label="@string/app_name">
         </activity>
     </application>
 
