--- a/AppControl/app/src/main/AndroidManifest.xml
+++ b/AppControl/app/src/main/AndroidManifest.xml
@@ -31,6 +31,18 @@
             android:name=".UsuarioForm"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".ABMActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".TareasActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".TareaForm"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
