--- a/AppControl/app/src/main/AndroidManifest.xml
+++ b/AppControl/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
             android:name=".TareaForm"
             android:label="@string/app_name">
         </activity>
+
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
